# hdmitsuba

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  README.md  pyproject.toml  pyrefly.toml.in  setpath.sh.in
.github/workflows/: build-and-test-template.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
docs/: user_guide.md
hdmitsuba/: CMakeLists.txt  __init__.py  camera.cc  camera.h  config.cc  config.h  curves.cc  curves.h  debug_codes.cc  debug_codes.h  instancer.cc  instancer.h  kernel_freezing.h  light.cc  light.h  material.cc  material.h  mesh.cc  mesh.h  plugInfo.json.in  prim_translator.cc  prim_translator.h  render_buffer.cc  render_buffer.h  render_delegate.cc  render_delegate.h  render_param.h  render_pass.cc  render_pass.h  render_settings.cc  render_settings.h  renderer_plugin.cc  renderer_plugin.h  scene_manager.cc  scene_manager.h  sdr_discovery.cc  sdr_parser.cc  spec_types.h  traversal.cc  traversal.h  (+1 more)
hdmitsuba/mesh/: geometry_ext.cc  geometry_processor.cc  geometry_processor.h  subdivision.cc  subdivision.h
hdmitsuba/mesh/tests/: geometry_processor_test.cc  subdivision_test.cc
hdmitsuba/resources/: curve.txt
hdmitsuba/test_assets/lights/: area.usda  constant.usda  directional.usda  disk.usda  envmap.usda  envmap_1x1.usda  ies.usda  mesh.usda  mesh_light_api.usda  point.usda  sphere.usda  spot.usda  textured_light.usda
hdmitsuba/test_assets/lights/textures/: step.ies
hdmitsuba/test_assets/materials/: checkerboard.usda  display_color.usda  materials.usda  mitsuba_bitmap.usda  nodegraphs.usda  normalmap.usda  texture_fallback.usda  texture_fallback_corrupt.usda
hdmitsuba/test_assets/render_settings/: aovs.usda  aovs_multiple_products.usda
hdmitsuba/test_assets/shapes/: cube.usda  curve.usda  displacement_preview_surface.usda  empty_mesh.usda  geom_subsets.usda  irradiancemeter.usda  skinned_mesh.usda  subdiv_cube.usda  subdiv_plane.usda  subdiv_two_quads.usda
hdmitsuba/tests/: __init__.py  camera_test.cc  camera_test.py  instancing_test.py  kernel_freezing_test.py  light_test.py  material_test.py  mesh_test.cc  render_settings_test.py  render_test.py  shape_test.py  test_helpers.py  test_util.h
hdmitsuba/tests/fuzzing/: README.md  test_001_translate.py  test_002_rotate.py  test_003_scale.py  test_004_visibility.py  test_005_active_state.py  test_006_mesh_points.py  test_007_material_diffuse.py  test_008_material_roughness.py  test_009_material_metallic.py  test_010_sphere_light_intensity.py  test_011_sphere_light_color.py  test_012_sphere_light_radius.py  test_013_dome_light_intensity.py  test_014_camera_transform.py  test_015_add_new_prim.py  test_016_hierarchy_parent_transform.py  test_017_multiple_transforms.py  test_018_material_binding.py  test_019_geom_extent.py  test_020_compound_modifications.py  test_021_displacement_modify.py  test_022_emissive_material.py  test_023_curves_width.py  test_024_subdiv_level.py  test_025_rect_light_dimensions.py  test_026_disk_light_radius.py  test_027_spot_light_shaping.py  test_028_spot_light_softness.py  test_029_directional_light_irradiance.py  test_030_material_ior.py  test_031_material_clearcoat.py  test_032_material_clearcoat_roughness.py  test_033_material_specular.py  test_034_material_opacity.py  test_035_double_sided_mesh.py  test_036_geom_subset_material.py  test_037_normalize_toggle.py  test_038_treat_as_point_toggle.py  test_039_camera_clipping_range.py  (+149 more)
nanobind/: usd.h
render_engine/: CMakeLists.txt  engine.cc  engine.h  engine_ext.cc  engine_test.py  render_scene_cli.py
usd_mitsuba/: camera.py  instancing.py  light.py  material.py  material_authoring.py  mesh.py  render_settings.py  translator.py  util.py
usd_mitsuba/tests/: camera_test.py  instancing_test.py  light_test.py  materials_test.py  render_settings_test.py  util_test.py
